# dilithium-demo

./: .gitignore  CMakeLists.txt  Dockerfile.windows  README.md  awdawsds.txt
.github/workflows/: build-server-windows.yml  build-windows.yml
client/: CMakeLists.txt  CMakeLists.txt.bak  Dockerfile  vcpkg.json
client/src/: apiclient.cpp  apiclient.h  crypto.cpp  crypto.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
server/: docker-compose.yml  requirements.txt  run-server.bat  run_server.py
server/app/: __init__.py  config.py  main.py  routes.py
server/app/crypto/: __init__.py  dilithium.py
server/app/models/: __init__.py  schemas.py
server/app/storage/: __init__.py  redis_client.py
